# VyapaarClaw

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  tsdown.config.ts  vyapaarclaw.mjs
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
demo/: automated_demo.py  cli_demo.py  dashboard.py  showcase_demo.py
deploy/: archestra.yaml  ngrok.yml
docs/: ARCHITECTURE.md  DASHBOARD_CODE_REVIEW.md  DASHBOARD_DESIGN.md  DASHBOARD_V2_SPEC.md  FOSSHACK_SUBMISSION.md  FOSS_BRAINSTORM.md  FOSS_RESEARCH.md  HACKATHON_DEMO_FLOW.md  HACKATHON_README.md  OPENCLAW_SHOWCASE.md  RECOMMENDED_SKILLS.md  SETUP.md  SLACK_SETUP.md  SYSTEM_DESIGN.md  TUNNEL_SETUP.md  architecture.mmd  system_flow.mmd
docs/diagrams/: architecture_full.mmd  foss_matrix.mmd  governance_pipeline.mmd  payout_workflow.mmd
docs/internal/: CHANGELOG.md
docs/internal/checkpoints/: CHECKPOINT_v4.md  CHECKPOINT_v5.md
docs/internal/code-reviews/: CODE_REVIEW.md  CODE_REVIEW_v5.1.0_FOSS.md  CODE_REVIEW_v5.1.md  COMPREHENSIVE_CODE_REVIEW.md
scripts/: audit_dashboard.py  demo_reset.sh  foundry_policies.sql  health_check.py  seed_policies.py  simulate_webhook.py  start-tunnel.sh  start_server.sh
skills/cfo/: SKILL.md
skills/cfo-canvas/: SKILL.md
skills/cfo-delegation/: SKILL.md
src/: entry.ts
src/cli/: banner.ts  bootstrap.ts  program.ts  web-runtime.ts
src/vyapaar_mcp/: __init__.py  config.py  logging_config.py  models.py  security.py  server.py
src/vyapaar_mcp/audit/: logger.py
src/vyapaar_mcp/cfo/: __init__.py  bank.py  calendar.py  categorizer.py  contracts.py  currency.py  forecaster.py  fraud.py  ledger.py  reports.py  sanctions.py  tax.py  workflow.py
src/vyapaar_mcp/db/: postgres.py  redis_client.py
src/vyapaar_mcp/egress/: __init__.py  ntfy_notifier.py  (+3 more)
templates/: AGENTS.md  SOUL.md  openclaw.json
tests/: conftest.py  test_anomaly.py  test_azure_client.py  test_budget.py  test_cfo.py  test_gleif.py  test_governance.py  test_ntfy.py  test_razorpay_bridge.py  test_resilience.py  test_slack.py  test_smoke.py  test_telegram.py  test_v2_tools.py
(+33 files in other folders)
